2012-07-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Xref Command Expansion): Clarify/unify
	treatment of @acronym, @abbr, @email, @image.
	(texinfo-devel 8 Jul 2012 09:38:25)

2012-07-06  Karl Berry  <karl@gnu.org>

	Avoid "may be used uninitialized" warnings from gcc.
	* info/infokey.c (compile): initialize seqstate.
	* info/window.c (process_node_text): initialize carried_over_len,
	carried_over_count, replen.
	(Not sure if they actually can be used uninitialized, but seems
	harmless to initialize them and avoid the warnings, anyway.)

	* doc/texinfo.tex (@ifcommanddefined, @ifcommandnotdefined): new
	prospective conditionals, not confirmed
	(txicommandconditionals): implicitly @set this variable.

	* doc/texinfo.txi (Node Line Requirements): discuss commands in
	node names.
	(Two Paths): merge into Texinfo Document Structure, with @anchor.
	(Node Line Tips): merge into Node Names, with anchor.
	(Node Menu Illustration): try making last in chapter.

2012-06-19  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Beginning a File): general updates
	throughout the chapter.

2012-07-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Software Copying Permissions): remove node.
	(Document Permissions): add replacement text.
	Suggestion from Patrice.

2012-07-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Overview): general updates
	throughout the chapter, most suggested by Patrice,
	texinfo-devel 21 May 2012 01:01:24.
	(Texinfo Document Structure): new section/node.

2012-06-29  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (top command): new node, merging the
	mostly-redundant information from the nodes:
	(makeinfo top command, makeinfo top): remove these.
	Leave anchors with the old node names behind.

2012-06-19  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Chapter Structuring): general updates
	throughout the chapter.
